--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,9 @@
 }
 
 .header-container{
-    /* height: 70px;
-    top: 30px;
-    left:351px; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* padding-top: 30px; */
     margin: 40px 0;
     
    
@@ -129,20 +125,47 @@ outline: none;
 }
 
 .section-container {
-display: flex   ;   
+height: 540px;
+background-image: url('../img/img.png');
+background-repeat: no-repeat;
+background-size: cover;
 position: relative;
-/* margin: 25px; */
+background-position: center;
+}
+.include-container{
+    display: flex   ;   
+    position: relative;
 }
 .section-container .section-left{
-    text-align: left;
-    z-index: 2px;
-    background-image: url('/img/img.png');
-    width: 50%;
-    gap: 10px;
-   
-   
-  
+     gap: 10px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 75px;
+    
 }
+.section-container .container{
+    position: relative;
+    z-index: 2;
+    color: white;
+    margin: 0 auto;
+    padding: 0 15px;
+    height: 100%;
+}
+
+
+.section-container .section-left::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 50%;
+    height: 100%;
+  }
+
 
 .section-container .section-left h1{
     font-size: 32px;
@@ -169,9 +192,9 @@ position: relative;
 }
 .offer-section .offer-1 .age{
     display: flex;
-    text-align: left;
+  align-items: center       ;
     gap: 10px;
-    justify-content: space-between;
+
 }
 .offer-section{
     display: grid;
@@ -238,7 +261,7 @@ margin-right: 30px;
 
 .offer-1 .age h2{
     font-size: 40px;
-    line-height: 54.47px;
+    line-height: 30px;
     font-family:'Open Sans', 'Helvetica Neue', sans-serif; 
     
 }
@@ -281,16 +304,35 @@ margin-right: 30px;
     color:#D29650;
     font-weight: 700;
 }
+.sloy-1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+.sloy-2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+.sloy-3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+.sloy-4{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
 .product-title{
     text-align: center;
     font-size: 32px;
     line-height: 43.58px;
     font-family:'Open Sans', 'Helvetica Neue', sans-serif; 
     color: #1D1D1D;
-}
-.sloy{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 20px;
+    margin: 60px 0;
 }
