--- a/css/style.css
+++ b/css/style.css
@@ -336,3 +336,101 @@ margin-right: 30px;
     color: #1D1D1D;
     margin: 60px 0;
 }
+.border h2{
+text-align: center ;
+color: white;
+font-size: 32px;
+line-height: 43.58px;
+font-family:'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+.list-container{
+display: flex;
+align-items: center;
+gap: 135px;
+}
+.list-left{
+    width: 490px;
+    height: 624px;
+    flex-shrink: 0;
+    background-image: url('../img/product.png');
+    padding: 30px;
+}
+
+.list-left:hover{
+    padding: 20px;
+}
+.border{
+    width: 100%;
+    height: 100%;
+    border: 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.list-right table{
+    width: 100%;
+}
+.list-right thead{
+    background-color:#DEDEDE;
+   padding: 10px 20px;
+   height: 39px;
+   gap: 10px;
+}
+.list-right tbody tr td{
+border-bottom: 1px solid#DEDEDE;
+height: 32px;
+}
+
+.list-right tbody tr td:nth-last-child(3){
+    border: none;
+        }
+.list-right tbody td{
+    text-align: center;
+    
+}
+.list-right p{
+    color: #1D1D1D;
+    font-size: 16px;
+    line-height: 21.79px;
+    font-family:'Open Sans', 'Helvetica Neue', sans-serif;  
+    margin-bottom: 20px;
+}
+.list-right h2{
+    color: #1D1D1D;
+    font-size: 16px;
+    line-height: 21.79px;
+    font-family:'Open Sans', 'Helvetica Neue', sans-serif;  
+    margin-bottom: 10px;
+}
+
+.list-right table p{
+    color: #1D1D1D;
+    font-size: 14px;
+    line-height: 19.07px;
+    font-family:'Open Sans', 'Helvetica Neue', sans-serif; 
+}
+.list-right .button-btn{
+    gap: 20px;
+    display: flex;
+    margin-top: 50px;
+}
+.list-right  button{
+
+    background-color:#D29650;
+    color: #FFFFFF;
+    padding: 16px 50px;
+    font-size: 18px;
+    line-height: 24.51px;
+    font-family:'Open Sans', 'Helvetica Neue', sans-serif; 
+ 
+}
+.list-right .btn-2{
+    border: none;
+}
+.list-right .btn-1{
+    color:#1D1D1D;
+    background-color:#FFFFFF;
+    border: 1px solid #D29650;
+}
