--- a/css/style.css
+++ b/css/style.css
@@ -60,12 +60,15 @@
 }
 
 .clock {
-    display: flex;
+    flex-shrink:100%;
+    gap: 5px;
+
 }
 
 .mail {
     display: flex;
     justify-content: end;
+    gap: 10px;
 }
 
 .header-right .location {
@@ -74,13 +77,7 @@
     align-items: center;
 }
 
-.header-right .clock {
-    gap: 10px;
-}
 
-.mail {
-    gap: 10px;
-}
 /**************************************************************/
 nav {
     background-color: #cb883a;
@@ -122,8 +119,8 @@ nav {
 
 .nav-container .nav-right span {
     position: absolute;
-    right: -5px;
-    top: 50%;
+    left: 90%;
+    top: 55%;
     transform: translateY(-50%);
 }
 
@@ -278,7 +275,7 @@ nav {
 
 .offer-1 .age h2 {
     font-size: 40px;
-    line-height: 30px;
+    line-height: 50px;
     font-family: "Open Sans", "Helvetica Neue", sans-serif;
 }
 /*****************************************************************************/
@@ -814,6 +811,10 @@ h2 {
     border: 1px solid #bcbcbc;
 }
 
+.btn-form{
+    display: flex;
+    justify-content: center;
+}
 
 .btn-form button {
     background-color: #ffffff;
@@ -825,6 +826,15 @@ h2 {
     border: 1px solid #d29650;
 }
 
+ #send:hover {
+    background-color: #d29650;
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 21.79px;
+    font-family: "Open Sans", "Helvetica Neue", sans-serif;
+    padding: 16px 70px !important;
+    border: none;
+}
 /*************************************************************/
 .container-footer {
     height: 300px;
